// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldset should render default form fieldset variant 1`] = `
<FormFieldset>
  <fieldset
    className="pf-c-form__fieldset"
  >
    <input
      id="input-id"
    />
  </fieldset>
</FormFieldset>
`;

exports[`FormFieldset should render form fieldset with custom class names 1`] = `
<FormFieldset
  className="extra-class another-class"
>
  <fieldset
    className="pf-c-form__fieldset extra-class another-class"
  >
    <input
      id="input-id"
    />
  </fieldset>
</FormFieldset>
`;

exports[`FormFieldset should render inline form fieldset variant 1`] = `
<FormFieldset
  isInline={true}
>
  <fieldset
    className="pf-c-form__fieldset pf-m-inline"
  >
    <input
      id="input-id"
    />
  </fieldset>
</FormFieldset>
`;
